welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: Int does not take parameters
  for (i <- 1 to T.length()-1) {
                         ^